feat: implemented backfill recordings

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,6 +5,7 @@
 @import "/themes/theme-high-contrast.css";
 @import "/themes/theme-nord.css";
 @import "/themes/theme-red.css";
+@import "./styles/recordings.css";
 
 @tailwind base;
 @tailwind components;
